# Broadmark

./: .gitignore  CMakeLists.txt
Broadmark/Algorithms/: AppMain.cpp  Macros.h
Broadmark/Algorithms/Broadphase/: BroadphaseInterface.h
Broadmark/Algorithms/Broadphase/Algorithms/: BaseAlgorithm.h  SoAAlgorithm.h
Broadmark/Algorithms/Broadphase/Algorithms/BF/: BF_Base.h  BF_Parallel.h  BF_SIMD.h  BF_SIMD_Parallel.h
Broadmark/Algorithms/Broadphase/Algorithms/CGAL/: CGAL.h
Broadmark/Algorithms/Broadphase/Algorithms/DBVT/: DBVT.cpp  DBVT.h
Broadmark/Algorithms/Broadphase/Algorithms/GPU/: Bullet3GPUAlgorithms.cpp  Bullet3GPUAlgorithms.h
Broadmark/Algorithms/Broadphase/Algorithms/Grid/: Grid_Base.h
Broadmark/Algorithms/Broadphase/Algorithms/KD/: KD.cpp  KD.h
Broadmark/Algorithms/Broadphase/Algorithms/Misc/: Inspectors.h  None.h
Broadmark/Algorithms/Broadphase/Algorithms/SAP/: SAP_Base.h  SAP_Parallel.h  SAP_SIMD.h  SAP_SIMD_Parallel.h
Broadmark/Algorithms/Broadphase/Algorithms/iSAP/: AxisSweep.cpp  AxisSweep.h
Broadmark/Algorithms/Broadphase/OverlapChaches/: HashedCache.h  NullCache.h  SimpleCache.h
Broadmark/Algorithms/Core/: Assertions.cpp  Assertions.h  Clock.h  Results.h  Settings.h
Broadmark/Algorithms/Core/Structures/: Pool.h  Stack.h
Broadmark/Algorithms/Dependencies/: doctest.h
Broadmark/Algorithms/Dependencies/Bullet2/LinearMath/: btAlignedAllocator.cpp
Broadmark/Algorithms/Dependencies/Bullet3/Bullet3Common/: b3AlignedAllocator.h
Broadmark/Algorithms/Dependencies/Bullet3/Bullet3OpenCL/BroadphaseCollision/: b3GpuGridBroadphase.cpp  b3GpuParallelLinearBvh.cpp  b3GpuParallelLinearBvhBroadphase.cpp  b3SapAabb.h
Broadmark/Algorithms/Dependencies/Bullet3/Bullet3OpenCL/BroadphaseCollision/kernels/: parallelLinearBvhKernels.h
Broadmark/Algorithms/Tests/: SettingsTest.cpp
